--- a/gb/16/10/31/n8446089.md
+++ b/gb/16/10/31/n8446089.md
@@ -1,13 +1,13 @@
 <a name="1" id="1" target="_blank"></a><span id="1"></span>
-<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/toqp2112/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/toqp2112/www/master/t/djy/1.jpg" title="大纪元"></a><a href="https://github.com/toqp2112/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/toqp2112/www/master/t/djy/3.jpg" title="国际新闻"></a><a href="https://github.com/toqp2112/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/toqp2112/www/master/t/djy/4.jpg" title="大陆新闻"></a><a href="https://github.com/toqp2112/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/toqp2112/www/master/t/djy/5.jpg" title="评论"></a><a href="https://github.com/toqp2112/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/toqp2112/www/master/t/djy/6.jpg" title="文化"></a><a href="https://github.com/toqp2112/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/toqp2112/www/master/t/djy/7.jpg" title="生活"></a><a href="https://github.com/toqp2112/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/toqp2112/www/master/t/djy/8.jpg" title="娱乐"></a><a href="https://github.com/toqp2112/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/toqp2112/www/master/t/djy/9.jpg" title="健康"><a href="https://github.com/toqp2112/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/toqp2112/www/master/t/djy/10a.jpg" title="独家"></a><a href="https://github.com/toqp2112/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/toqp2112/www/master/t/djy/12a.jpg" title="头条"></a></td></tr>
-<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/toqp2112/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/toqp2112/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/toqp2112/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/toqp2112/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/toqp2112/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/toqp2112/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/toqp2112/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/toqp2112/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/toqp2112/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/toqp2112/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/toqp2112/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/toqp2112/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/toqp2112/www/blob/master/README.md?zsrh#8">翻墙</a></p><p><a target="_blank" href="https://github.com/toqp2112/djy/blob/master/gb/nf5562.md#1">伪火</a> | <a target="_blank" href="https://github.com/toqp2112/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/toqp2112/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/toqp2112/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/toqp2112/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/toqp2112/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/toqp2112/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/toqp2112/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/toqp2112/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/toqp2112/ntdtv/blob/master/gb/prog1530_1.md#1">和平抗议</a> | <a target="_blank" href="https://github.com/toqp2112/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/toqp2112/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/toqp2112/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/toqp2112/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
+<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/hxcaik307/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/hxcaik307/www/master/t/djy/1.jpg" title="大纪元首页" alt="大纪元首页"></a><a href="https://github.com/hxcaik307/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/hxcaik307/www/master/t/djy/3.jpg" title="国际新闻" alt="国际新闻"></a><a href="https://github.com/hxcaik307/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/hxcaik307/www/master/t/djy/4.jpg" title="大陆新闻" alt="大陆新闻"></a><a href="https://github.com/hxcaik307/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/hxcaik307/www/master/t/djy/5.jpg" title="大纪元评论" alt="大纪元评论"></a><a href="https://github.com/hxcaik307/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/hxcaik307/www/master/t/djy/6.jpg" title="传统文化" alt="传统文化"></a><a href="https://github.com/hxcaik307/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/hxcaik307/www/master/t/djy/7.jpg" title="生活消费" alt="生活消费"></a><a href="https://github.com/hxcaik307/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/hxcaik307/www/master/t/djy/8.jpg" title="娱乐休闲" alt="娱乐休闲"></a><a href="https://github.com/hxcaik307/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/hxcaik307/www/master/t/djy/9.jpg" title="健康" alt="健康"></a><a href="https://github.com/hxcaik307/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/hxcaik307/www/master/t/djy/10a.jpg" title="独家" alt="独家"></a><a href="https://github.com/hxcaik307/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/hxcaik307/www/master/t/djy/12a.jpg" title="头条要闻" alt="头条要闻"></a></td></tr>
+<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/hxcaik307/www/blob/master/README.md?zsrh#1">翻墙</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/hxcaik307/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf5562.md#1">伪火</a></p><p><a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/hxcaik307/www/blob/master/README.md?zsrh#1">平台首页</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
 <tr><td VALIGN=TOP width="626"><h2 align=center>课后辅导 需要帮助孩子改善学习方法</h2>
 <img width="600" src="https://i.epochtimes.com/assets/uploads/2016/10/re_1105F-C3-mz-v3.jpg" />
 <h6>辅导机构不只要为学生补知识，更要为学生建立良好学习能力。（Shutterstock）
 </h6>
 <hr>
 	<p>【大纪元2016年10月31日讯】不久前，中国新东方创始人俞敏洪发表了一个演讲，提到新东方比阿里巴巴早很多年就在美国上市了，目前也有75亿美元的市值，但是马云却后来居上，他们两个现在财富相差是惊人的2,600亿美元。俞敏洪的演讲当然不是为了比拼财富，但从他的言语之间我们可以窥探一斑，那就是在中国，人们已经把教育视为与房地产、网上交易等同，是一门可以获取暴利的行业。</p>
-<p>因此，很多人蜂拥进入教育这个行业，唯一目的就是赚钱。门槛低、来钱快是中国课后辅导行业的现状。租一间写字楼，雇几名在校的或者刚毕业的大学生，一个课后补习学校就起来了。由于人口多、社会竞争激烈，中国家长们都极度重视子女的学业。只要有老师当班，辅导机构就不愁没生源，但教学品质堪虑，也失去教育的意义。这就是<ahref="https://github.com/toqp2112/djy/blob/master/gb/tag/%E4%B8%AD%E5%9B%BD%E6%95%99%E8%82%B2%E4%BA%A7%E4%B8%9A%E5%8C%96.md#1">中国教育产业化</a>的现状。</p>
+<p>因此，很多人蜂拥进入教育这个行业，唯一目的就是赚钱。门槛低、来钱快是中国课后辅导行业的现状。租一间写字楼，雇几名在校的或者刚毕业的大学生，一个课后补习学校就起来了。由于人口多、社会竞争激烈，中国家长们都极度重视子女的学业。只要有老师当班，辅导机构就不愁没生源，但教学品质堪虑，也失去教育的意义。这就是<ahref="https://github.com/hxcaik307/djy/blob/master/gb/tag/%E4%B8%AD%E5%9B%BD%E6%95%99%E8%82%B2%E4%BA%A7%E4%B8%9A%E5%8C%96.md#1">中国教育产业化</a>的现状。</p>
 <h2>写字楼里的朗朗读书声？</h2>
 <p>很多孩子在周中几乎每天都从放学一直补习到晚上八九点，周末更是通常全天都排满了课。在北上广等发达地区，一个中学生每月的补习费通常是四位数起跳，如果有请外教的话，很可能要达到五位数。</p>
 <p>在这种情况下，我们看到很多补习机构内的景像是，一个不过两百平米的空间，同时会有上百个学生挤在一起上课学习。很多在校教书的老师为了增加收入而在校外补习班兼职，严重影响到学校正常的教学；甚至还有一些教育局领导的亲属们，也公开办起了各种教育辅导的咨询机构，通过与政府机构的内部关系来招揽生意并牟利。这些课后辅导机构，其成立本身就不是以教书育人为根本目标，最终的效果也可想而知。</p>
@@ -32,7 +32,7 @@
 <p>3）周末把一周学习过程完成回顾、整理，对知识查缺补漏，发现没有学好的地方赶紧弥补加强。</p>
 <p>4）帮助孩子建立错题和难题管理。错题、难题本身就是很好的归纳和总结，孩子如果有自己的错题和难题本，考试之前复习就会更有目的性，考试中也会减少很多可以避免的错误发生。</p>
 <p>5）多注重效率而不是绝对时间。孩子做功课到凌晨一、二点并不一定是好事，苦学和题海并不是成功的代名词。用对方法、学得巧才能达到可持续性的学习，才能真正让孩子得到学习的乐趣和自信。</p>
-<p><ahref="https://github.com/toqp2112/djy/blob/master/gb/tag/%E6%98%93%E9%80%9A%E6%95%99%E8%82%B2.md#1">易通教育</a>致力于为6～12年级学生提供课后辅导、备考、大学申请规划等专业性一站式服务，在湾区的Milpitas、Cupertino和San Mateo设有三家分校。易通教育电话：（408）493-6461、（650）683-5549；网址：www.easythrulearning.com。</p>
+<p><ahref="https://github.com/hxcaik307/djy/blob/master/gb/tag/%E6%98%93%E9%80%9A%E6%95%99%E8%82%B2.md#1">易通教育</a>致力于为6～12年级学生提供课后辅导、备考、大学申请规划等专业性一站式服务，在湾区的Milpitas、Cupertino和San Mateo设有三家分校。易通教育电话：（408）493-6461、（650）683-5549；网址：www.easythrulearning.com。</p>
 <p><b><a style="color: #3339ff;" href="http://zipsurvey.com/Survey.aspx?suid=79300&amp;key=4EF2EA2A">要想定期快速浏览一周新闻集锦，请点这里。</a></b></p>
 <p>责任编辑：李欧</p>
 	
@@ -40,36 +40,41 @@
 
 
 <strong>相关新闻：</strong>
-<li><a href="https://github.com/toqp2112/djy/blob/master/gb/16/2/9/n4636549.md#1">大学援助申请   常见问题</a></li>
-<li><a href="https://github.com/toqp2112/djy/blob/master/gb/16/4/30/n7789561.md#1">知识分子会议后 学者揭江泽民摧毁中国教育</a></li>
-<li><a href="https://github.com/toqp2112/djy/blob/master/gb/16/5/1/n7790233.md#1">熊飞骏：芮成钢现象折射出的中国教育悲剧</a></li>
-<li><a href="https://github.com/toqp2112/djy/blob/master/gb/16/10/24/n8425795.md#1">中美教育与课后辅导机构现状</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/16/2/9/n4636549.md#1">大学援助申请   常见问题</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/16/4/30/n7789561.md#1">知识分子会议后 学者揭江泽民摧毁中国教育</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/16/5/1/n7790233.md#1">熊飞骏：芮成钢现象折射出的中国教育悲剧</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/16/10/24/n8425795.md#1">中美教育与课后辅导机构现状</a></li>
 <hr>
 
 
 <strong>编辑推荐：</strong>
-<li><a href="https://github.com/onzhi266/djy/blob/master/gb/20/2/22/n11887949.md#1">美参议员：中共刻意控制新冠病毒信息流动</a></li>
-<li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/6/4/n11300386.md#1" target="_blank">林辉：大饥荒 中共却无偿送几内亚万吨大米</a></li><li><a href="https://github.com/toqp2112/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank">善良女子被中共投男牢</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/8/20/n11466682.md#1" target="_blank">患脑瘤等死 中共总参工程师炼法轮功后痊愈</a></li>
+<li><a href="https://github.com/upjkzu3674/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank">藏字石 蕴天机</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/17/12/29/n10006546.md#1" target="_blank">坚持共产体制推改革 波共前书记被轰下台</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/8/30/n11488663.md#1" target="_blank">寻获生命真谛 法国医院院长分享修炼感悟</a></li>
 <hr>
 
 <strong>热门新闻：</strong>
-<li><a href="https://github.com/toqp2112/djy/blob/master/gb/20/6/16/n12190320.md#1">中印冲突印方升至20死 消息：中方43人伤亡</a></li>
-<li><a href="https://github.com/toqp2112/djy/blob/master/gb/20/6/16/n12189414.md#1">中印边境冲突升级 两军至少8死11伤</a></li>
-<li><a href="https://github.com/toqp2112/djy/blob/master/gb/20/6/15/n12186960.md#1">美提台湾防卫法 分析：下一步或在台驻军</a></li>
-<li><a href="https://github.com/toqp2112/djy/blob/master/gb/20/6/15/n12187376.md#1">美150议员提议制裁中共政治局委员及家属</a></li>
-<li><a href="https://github.com/toqp2112/djy/blob/master/gb/20/6/15/n12186268.md#1">加国华裔邱香果将致命病毒运往武汉实验室</a></li>
-<li><a href="https://github.com/toqp2112/djy/blob/master/gb/20/6/15/n12185955.md#1">余苑绮抗癌路艰辛 进行肝手术 网友打气</a></li>
-<li><a href="https://github.com/toqp2112/djy/blob/master/gb/20/6/14/n12185206.md#1">与刘诗诗是否生二胎？吴奇隆的回应感动网友</a></li>
-<li><a href="https://github.com/toqp2112/djy/blob/master/gb/20/6/14/n12185250.md#1">被认为唱太好反得低分 歌手丁当呛节目评审</a></li>
-<li><a href="https://github.com/toqp2112/djy/blob/master/gb/20/6/15/n12187794.md#1">老婆小孩谁最重要？吴奇隆回答获赞EQ超高</a></li>
-<li><a href="https://github.com/toqp2112/djy/blob/master/gb/20/6/14/n12184431.md#1">冤狱36年 美国男子上达人秀唱哭观众</a></li>
-<li><a href="https://github.com/toqp2112/djy/blob/master/gb/20/6/15/n12186774.md#1">因封城变清澈 土耳其湖下4世纪教堂重见天日</a></li>
-<li><a href="https://github.com/toqp2112/djy/blob/master/gb/20/6/2/n12153788.md#1">纵横破解：预言与人生 （上）</a></li>
-<li><a href="https://github.com/toqp2112/djy/blob/master/gb/8/5/30/n2136550.md#1">富丽奇巧凡尔赛宫──巴洛克建筑</a></li>
-<li><a href="https://github.com/toqp2112/djy/blob/master/gb/20/5/30/n12148607.md#1">文姬归汉凄又美（3）</a></li>
-<li><a href="https://github.com/toqp2112/djy/blob/master/gb/20/6/12/n12181432.md#1">【佳人传】如兰胜雪 才女张玉娘的凄婉传奇</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/14/n13576716.md#1">【百年真相】亲历者揭秘“1952细菌战”真相</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/25/n13605590.md#1">【未解之谜】地球磁极倒转进行中??</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/28/n13610168.md#1">【神韵作品】唐瑞讲故事｜朗读｜小熊维尼第一章</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/22/n13597113.md#1">【百年真相】现代文字狱 胡风如何成了反革命？</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/17/n13582752.md#1">【奇事】两位卜算大师看出对方死期 但两人皆无法避过</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/3/1/n13614863.md#1">《梁祝》小提琴协奏曲</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/3/2/n13616638.md#1">【十字路口】蓬佩奥到访台湾意义重大？</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/3/2/n13615200.md#1">吴明德：中共暗撑俄侵乌 恐成国际大输家</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/26/n13607661.md#1">【更新2.27】乌总统：接下来24小时至关重要</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/28/n13610320.md#1">乌克兰用无人机摧毁俄导弹系统 视频曝光</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/27/n13609576.md#1">俄银行被切断SWIFT系统 中共角色更尴尬</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/27/n13609572.md#1">纳豆或暂退萤光幕一年 经纪人曝他最新病况</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/27/n13609465.md#1">看海狮资料一目十行过目不忘 杨幂展超强记忆力</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/3/1/n13614888.md#1">赴韩拍戏皮肤长满红斑 范冰冰素颜照吓坏网友</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/28/n13612216.md#1">港星吴孟达过世一周年 长眠大马原因曝光</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/3/1/n13614510.md#1">香港TVB艺人祝文君罹癌离世 终年55岁</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/28/n13612112.md#1">更强Omicron变种出现？致病性、传播力一次看</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/23/n13599631.md#1">疫苗、口罩难结束疫情 这一件事或成关键</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/26/n13607140.md#1">睡眠十大好处 提高脑力、抗衰老都在内</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/27/n13608014.md#1">多吃橙色食物 不只护眼 还有这些强大好处</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/3/1/n13613932.md#1">【健康1+1】染Omicron出现脑雾 一方法2周解除</a></li>
 <hr>
 
-<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/toqp2112/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/toqp2112/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/16/10/31/n8446089.htm">课后辅导 需要帮助孩子改善学习方法</a></p><hr>
+<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/hxcaik307/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/hxcaik307/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/16/10/31/n8446089.htm">课后辅导 需要帮助孩子改善学习方法</a></p><hr>
 
-<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="http://d1p1.ip.zn2.us/v.php?action=qrcode&url=https://github.com/toqp2112/djy/blob/master/gb/16/10/31/n8446089.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/toqp2112/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/toqp2112/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/toqp2112/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/toqp2112/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/toqp2112/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/toqp2112/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/toqp2112/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/toqp2112/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/toqp2112/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/toqp2112/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/toqp2112/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/toqp2112/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/toqp2112/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/toqp2112/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/toqp2112/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/toqp2112/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/toqp2112/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/toqp2112/djy/master/gb/300/st1.jpg" title="关注3亿人三退"  alt="关注3亿人三退"></a><br><a href="https://github.com/toqp2112/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/toqp2112/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/toqp2112/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/toqp2112/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/toqp2112/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/toqp2112/djy/master/gb/300/sj1.jpg" title="303万人举报江泽民"  alt="303万人举报江泽民"></a><br><a href="https://github.com/toqp2112/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/toqp2112/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/toqp2112/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/toqp2112/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/toqp2112/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/toqp2112/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/toqp2112/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/toqp2112/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/toqp2112/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/toqp2112/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/toqp2112/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/toqp2112/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/toqp2112/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/toqp2112/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/toqp2112/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/toqp2112/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/toqp2112/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/toqp2112/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/toqp2112/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/toqp2112/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/toqp2112/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/toqp2112/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/toqp2112/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/toqp2112/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
+<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://chart.apis.google.com/chart?cht=qr&chs=240x240&choe=UTF-8&chld=M|2&chl=https://github.com/hxcaik307/djy/blob/master/gb/16/10/31/n8446089.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/hxcaik307/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/hxcaik307/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/st1.jpg" title="关注三亿人三退"  alt="关注三亿人三退"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/sj1.jpg" title="三百多万人举报江泽民"  alt="三百多万人举报江泽民"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/hxcaik307/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
